[FLINK-8933] Avoid calling Class#newInstance